[gd_scene load_steps=22 format=3 uid="uid://dwdc1f60bekgq"]

[ext_resource type="Texture2D" uid="uid://5s1qaxknbe1f" path="res://Assets/Ufo/Ufo.png" id="1_0y458"]
[ext_resource type="Script" path="res://Scenes/ufo.gd" id="1_5yxlv"]
[ext_resource type="Texture2D" uid="uid://dy2h5dklc8h7p" path="res://Assets/Invaders/Invader1-1.png" id="3_6kcwn"]
[ext_resource type="Script" path="res://Scenes/ufo_shooting.gd" id="3_7emqj"]
[ext_resource type="Texture2D" uid="uid://d36ojqdjb7r5c" path="res://Resources/ufo.tres" id="3_lbldu"]
[ext_resource type="PackedScene" uid="uid://lqnuy0gfw77f" path="res://Scenes/invader_shot.tscn" id="4_4vh0s"]
[ext_resource type="Script" path="res://spawn_timer.gd" id="5_18cdc"]
[ext_resource type="Texture2D" uid="uid://ctu8snp11c12t" path="res://Assets/Invaders/Invader-explosion-1.png" id="6_4lmcq"]
[ext_resource type="Texture2D" uid="uid://dcoy6mphlfi8i" path="res://Assets/Invaders/Invader-explosion-2.png" id="7_jey6t"]
[ext_resource type="Texture2D" uid="uid://b06nkmo0fwryx" path="res://Assets/Invaders/Invader1-2.png" id="8_2gid3"]
[ext_resource type="Texture2D" uid="uid://bn227mp3yqjlo" path="res://Assets/Invaders/Invader2-1.png" id="9_xcpp7"]
[ext_resource type="Texture2D" uid="uid://csjijhakxgfpy" path="res://Assets/Invaders/Invader2-2.png" id="10_gkrdn"]
[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://Assets/Invaders/Invader3-1.png" id="11_6c6bf"]
[ext_resource type="Texture2D" uid="uid://bfg1tahjcdwb4" path="res://Assets/Invaders/Invader3-2.png" id="12_q2kda"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_djyu8"]
radius = 2.25
height = 16.0

[sub_resource type="Animation" id="Animation_6du8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_0y458")]
}

[sub_resource type="Animation" id="Animation_r8k6w"]
resource_name = "destroy"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("6_4lmcq"), ExtResource("7_jey6t")]
}

[sub_resource type="Animation" id="Animation_u0v2k"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("8_2gid3"), ExtResource("3_6kcwn")]
}

[sub_resource type="Animation" id="Animation_kf8jt"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_xcpp7"), ExtResource("10_gkrdn")]
}

[sub_resource type="Animation" id="Animation_srt4y"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("11_6c6bf"), ExtResource("12_q2kda")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wg7en"]
_data = {
"RESET": SubResource("Animation_6du8x"),
"destroy": SubResource("Animation_r8k6w"),
"move_1": SubResource("Animation_u0v2k"),
"move_2": SubResource("Animation_kf8jt"),
"move_3": SubResource("Animation_srt4y")
}

[node name="Area2D" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 64
collision_mask = 2
script = ExtResource("1_5yxlv")
projectile_scene = ExtResource("4_4vh0s")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_lbldu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_djyu8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.125, 0)
scale = Vector2(0.7875, 0.35)

[node name="ShootingPoint" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 2.25)
script = ExtResource("3_7emqj")
projectile_scene = ExtResource("4_4vh0s")

[node name="SpawnTimer" type="Timer" parent="ShootingPoint"]
script = ExtResource("5_18cdc")
min_timer = 1
max_timer = 3

[node name="AttackTimer" type="Timer" parent="."]

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_wg7en")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
